--- a/MyApplication2/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication2/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,12 @@
         android:background="#DC4236">
 
         <ImageButton
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:id="@+id/menu"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:scaleType="centerInside"
+            android:background="#DC4236"
+            android:src="@drawable/que"
             tools:src="@drawable/que" />
 
         <TextView
@@ -30,10 +33,14 @@
             android:textColor="#FFFFFF"
             android:textSize="30sp"
             android:textStyle="bold" />
+
         <ImageButton
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:id="@+id/search"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:scaleType="centerInside"
+            android:background="#DC4236"
+            android:src="@drawable/search"
             tools:src="@drawable/search" />
     </LinearLayout>
 
@@ -45,9 +52,12 @@
         android:background="#E5E5E5">
 
         <ImageButton
+            android:id="@+id/tick"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:scaleType="centerInside"
+            android:background="#E5E5E5"
+            android:src="@drawable/tick"
             tools:src="@drawable/tick" />
         <TextView
             android:id="@+id/note"
@@ -59,10 +69,14 @@
             android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="normal" />
+
         <ImageButton
+            android:id="@+id/x"
             android:layout_width="60dp"
             android:layout_height="80dp"
             android:scaleType="centerInside"
+            android:background="#E5E5E5"
+            android:src="@drawable/x"
             tools:src="@drawable/x" />
 
 
@@ -70,7 +84,8 @@
     </LinearLayout>
 
     <ListView
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
