--- a/MyApplication2/app/src/main/res/layout/layout_item.xml
+++ b/MyApplication2/app/src/main/res/layout/layout_item.xml
@@ -20,7 +20,7 @@
             app:srcCompat="@drawable/icon1" />
         <LinearLayout
             android:id="@+id/linearLayout1"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:ignore="MissingConstraints"
             android:orientation="vertical">
@@ -32,7 +32,7 @@
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/name"
-                    android:layout_width="200dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
@@ -42,40 +42,46 @@
                     android:textStyle="normal" />
                 <TextView
                     android:id="@+id/time"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center_vertical"
+                    android:gravity="center_vertical|right"
                     android:text="@string/time"
                     android:textColor="#000000"
                     android:textSize="15sp"
-                    android:textStyle="normal" />
+                    android:textStyle="normal"
+                    android:layout_gravity="end"
+                    android:paddingEnd="20dp"/>
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/linearLayout3"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:ignore="MissingConstraints"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                tools:ignore="MissingConstraints">
+
                 <LinearLayout
                     android:id="@+id/linearLayout4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:ignore="MissingConstraints"
-                    android:orientation="vertical">
+                    android:layout_width="300dp"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    tools:ignore="MissingConstraints">
+
                     <TextView
                         android:id="@+id/subject"
-                        android:layout_width="200dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center_vertical"
                         android:text="@string/name"
                         android:textColor="#000000"
-                        android:textSize="18sp"
+                        android:textSize="15sp"
                         android:textStyle="normal" />
+
                     <TextView
                         android:id="@+id/content"
-                        android:layout_width="200dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center_vertical"
@@ -84,12 +90,11 @@
                         android:textSize="15sp"
                         android:textStyle="normal" />
                 </LinearLayout>
+
                 <CheckBox
                     android:id="@+id/check_selected"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
             </LinearLayout>
 
