--- a/calculator/app/src/main/res/layout/activity_main.xml
+++ b/calculator/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,9 @@
                 android:layout_weight="1"
                 android:background="@drawable/button"
                 android:text="@string/CE"
+                android:textColor="#FFFFFF"
+                android:textColorHighlight="#ff6780a4"
+                android:textColorLink="#ff6750a4"
                 android:textSize="30dp" />
 
             <Button
@@ -56,6 +59,7 @@
                 android:layout_weight="1"
                 android:background="@drawable/button"
                 android:text="@string/C"
+                android:textColorLink="#F8F6F6"
                 android:textSize="30dp" />
 
             <Button
