--- a/GooglePlayApp/app/src/main/res/layout/activity_main.xml
+++ b/GooglePlayApp/app/src/main/res/layout/activity_main.xml
@@ -103,6 +103,46 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listapp_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@+id/category_recycler_view"
+            app:layout_constraintBottom_toTopOf="@+id/end_bar"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/end_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="7dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints">
+
+        <ImageButton
+            android:layout_width="125dp"
+            android:layout_height="63dp"
+            android:layout_marginTop="13dp"
+            android:background="@android:color/transparent"
+            android:scaleType="centerInside"
+            android:src="@drawable/icon_gamse" />
+
+        <ImageButton
+            android:layout_width="145dp"
+            android:layout_height="63dp"
+            android:layout_marginTop="13dp"
+            android:background="@android:color/transparent"
+            android:scaleType="centerInside"
+            android:src="@drawable/icon_apps" />
+
+        <ImageButton
+            android:layout_width="125dp"
+            android:layout_height="63dp"
+            android:layout_marginTop="13dp"
+            android:background="@android:color/transparent"
+            android:scaleType="centerInside"
+            android:src="@drawable/icon_book" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
